updated layout to remove excess spacing and fix margins

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,7 +21,7 @@ h1 {
 .App {
   /*background-color: #282c34;*/
   background-color: #ffffff;
-  min-height: 100vh;
+  min-height: 60vh;
   color: #666666;
 }
 
